[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player/VCRStop.gd" type="Script" id=1]
[ext_resource path="res://Player/VCR.gd" type="Script" id=2]
[ext_resource path="res://BoilerPlate/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://Player/VCRPlay.gd" type="Script" id=4]
[ext_resource path="res://Player/VCRRewind.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]

[node name="VCR" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
initial_state = NodePath("Stop")

[node name="Stop" type="Node" parent="StateMachine"]
script = ExtResource( 1 )

[node name="Play" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Rewind" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="StateMachine/Rewind"]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_VCR_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_VCR_area_exited"]
[connection signal="timeout" from="StateMachine/Rewind/Timer" to="StateMachine/Rewind" method="_on_Timer_timeout"]
